--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiofiles==24.1.0
 fastapi==0.115.12
 uvicorn[standard]
-sqlalchemy
+sqlalchemy==2.0.41
 pydantic==2.10.5
 email-validator==2.2.0
 pymysql==1.1.1
@@ -20,7 +20,7 @@ Authlib==1.3.0
 google-api-python-client==2.167.0
 google-auth==2.39.0
 google-auth-oauthlib==1.2.2
-pytz
+pytz==2025.2
 google-auth-httplib2==0.2.0
 redis>=4.5.0,<5.0.0
 celery>=5.2.0,<5.5.0
@@ -28,10 +28,10 @@ aiohttp==3.11.18
 weasyprint>=54.0
 markdown2>=2.4.0
 python-dotenv==1.0.1
-langgraph
-langchain
-langchain-google-genai
-langchain-core
+langgraph==0.2.35
+langchain==0.3.25
+langchain-google-genai==2.1.4
+langchain-core==0.3.60
 tiktoken==0.8.0
 pymupdf==1.25.5
 pymupdf4llm==0.0.24
