--- a/requirements.txt
+++ b/requirements.txt
@@ -30,9 +30,12 @@ markdown2>=2.4.0
 python-dotenv==1.0.1
 langgraph==0.2.35
 langchain==0.3.25
+langchain_community==0.3.24
 langchain-google-genai==2.1.4
 langchain-core==0.3.60
 tiktoken==0.8.0
 pymupdf==1.25.5
 pymupdf4llm==0.0.24
 python-docx==1.1.2
+qdrant_client==1.14.2
+langchain-qdrant==0.2.0
