--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - MINIO_SECRET_KEY=${MINIO_SECRET_KEY:-minioadmin}
       - MINIO_BUCKET_NAME=${MINIO_BUCKET_NAME:-enterviu-ai}
       - MINIO_SECURE=${MINIO_SECURE:-False}
-      - QDRANT_URL=http://qdrant:6334
+      - QDRANT_URL=http://qdrant:6333 # Changed from 6334 to 6333
       - QDRANT_COLLECTION=agentic_rag_kb
       - PYTHONDONTWRITEBYTECODE=1
     env_file:
@@ -35,8 +35,6 @@ services:
     depends_on:
       minio:
         condition: service_started
-      qdrant:
-        condition: service_healthy
 
   minio:
     image: minio/minio
@@ -70,7 +68,7 @@ services:
       - MINIO_SECRET_KEY=${MINIO_SECRET_KEY:-minioadmin}
       - MINIO_BUCKET_NAME=${MINIO_BUCKET_NAME:-enterviu-ai}
       - MINIO_SECURE=false
-      - QDRANT_URL=http://qdrant:6334
+      - QDRANT_URL=http://qdrant:6333 # Changed from 6334 to 6333
       - QDRANT_COLLECTION=agentic_rag_kb
       - CELERY_WORKER_CONCURRENCY=4  # Set concurrency for Celery workers
     env_file:
@@ -84,8 +82,6 @@ services:
         condition: service_started
       api:
         condition: service_started
-      qdrant:
-        condition: service_healthy
     restart: always
 
   redis-enterviu:
@@ -96,24 +92,6 @@ services:
     networks:
       - enterviu-network
     restart: always
-    
-  qdrant:
-    image: qdrant/qdrant:latest
-    container_name: qdrant
-    ports:
-      - "6333:6333"  # gRPC API
-      - "6334:6334"  # HTTP API
-    volumes:
-      - qdrant-data:/qdrant/storage
-    networks:
-      - enterviu-network
-    restart: always
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/readiness"] # Corrected port to 6333
-      interval: 5s
-      timeout: 10s
-      retries: 5
-      start_period: 15s
 
 networks:
   enterviu-network:
@@ -121,5 +99,4 @@ networks:
 
 volumes:
   minio-data:
-  audio_data:  
-  qdrant-data:
+  audio_data:
