--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,28 +1,72 @@
-name: Build and Push Docker Image
+name: Docker Compose CI/CD
 
 on:
   push:
     branches:
-      - main  # or your target branch
+      - main
 
 jobs:
-  build-and-push:
+  docker-compose-build:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # Create .env file
+      - name: Create .env file
+        run: |
+          echo "${{ secrets.ENV_FILE }}" | base64 --decode > .env
 
+      # Log in to Docker Hub (optional, required if pushing images)
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push using Docker Compose
+      # Build services with docker-compose
+      - name: Build Docker Compose services
         run: |
-          docker compose -f ./docker-compose.yml build
-          docker compose -f ./docker-compose.yml push
+          docker-compose build
+
+      # Push built images to registry (optional)
+      - name: Push images to Docker Hub
+        run: |
+          docker-compose push
+
+      # Test the services (optional)
+      - name: Test services
+        run: |
+          docker-compose up -d
+          sleep 30
+          docker-compose ps
+          docker-compose down
+
+  # deploy:
+  #   runs-on: self-hosted
+  #   needs: docker-build
+
+  #   steps:
+
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+  #       with:
+  #         clean: false
+
+  #     - name: Clean up old Docker resources
+  #       run: |
+  #         docker stop money-ez-ai || true
+  #         docker rm money-ez-ai || true
+    
+  #     - name: Deploy to VPS
+  #       run: |
+  #         docker pull ducdang03/money-ez-ai:latest
+  #         docker run -d --name money-ez-ai -p 8888:8888 \
+  #           -e GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} \
+  #           -e QDRANT_API_KEY=${{ secrets.QDRANT_API_KEY }} \
+  #           ducdang03/money-ez-ai:latest
+  
+  #     - name: Verify running containers
+  #       run: docker ps -a
