--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Compose CI/CD
+name: Docker API CI/CD
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  docker-compose-build:
+  docker-api-build:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,28 +26,24 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build services with docker-compose
-      - name: Build Docker Compose services
+      # Build and push API image
+      - name: Build and push API image
         run: |
-          docker compose build
-
-      # Push images to Docker Hub
-      - name: Push images to Docker Hub
-        run: |
+          docker build -t luongnguyenminhan/enteviu-api:latest .
           docker push luongnguyenminhan/enteviu-api:latest
-          docker push luongnguyenminhan/enteviu-celery:latest
 
-      # Test the services (optional)
-      - name: Test services
+      # Test the API service (optional)
+      - name: Test API service
         run: |
-          docker compose up -d
+          docker run -d --name test-api -p 8000:8000 --env ENV=development luongnguyenminhan/enteviu-api:latest
           sleep 30
-          docker compose ps
-          docker compose logs --tail=50
-          docker compose down
+          docker ps
+          docker logs test-api
+          docker stop test-api
+          docker rm test-api
 
   deploy:
-    needs: docker-compose-build
+    needs: docker-api-build
     runs-on: ubuntu-latest
     if: success()
 
@@ -56,6 +52,5 @@ jobs:
       - name: Deploy to server
         run: |
           echo "Deployment step - configure based on your deployment target"
-          echo "Images pushed successfully:"
+          echo "Image pushed successfully:"
           echo "- luongnguyenminhan/enteviu-api:latest"
-          echo "- luongnguyenminhan/enteviu-celery:latest"
