--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,30 @@
+
+# Bỏ qua thư mục __pycache__ và các tệp compiled Python
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-.env
-.venv
+*.pyc
+*.pyo
+*.pyd
+# Bỏ qua môi trường ảo (virtual environment)
 venv/
-ENV/
-.idea/
+meobeo/
+
+# Bỏ qua file log, cache
+*.log
+*.sqlite3
+db.sqlite3
+
+# Bỏ qua thư mục của IDE (VSCode, PyCharm)
 .vscode/
-data/
-phowhisper/
-.DS_Store
+.idea/
+alembic.ini
+.env
+
+# Bỏ qua các tệp cấu hình cá nhân
+*.sublime-project
+*.sublime-workspace
+# Bỏ qua các tệp cấu hình của hệ điều hành
+*.DS_Store
+# Bỏ qua các tệp cấu hình của hệ điều hành
+client-secret.json
+
+node_modules/
