--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,26 @@
+[project]
+name = "recru-api"
+version = "2.0.0"
+description = "Recruitment API with FastAPI"
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+readme = "README.md"
+requires-python = ">=3.8"
+dependencies = [
+    "fastapi>=0.115.0",
+    "uvicorn[standard]",
+    "sqlalchemy>=2.0.0",
+    "pydantic>=2.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "black",
+    "ruff",
+]
+
 [tool.ruff]
 line-length = 200
 target-version = "py313"
